<resources>
    <string name="app_name">AviateGPS</string>
    <string name="location_text">Location:</string>
    <string name="speed_text">Speed:</string>
    <string name="altitude_text">Altitude:</string>
    <string name="heading_text">Heading:</string>
    <string name="distance_text">Distance to target:</string>
    <string name="map_toggle_text">Toggle Map View</string>
    <string name="enter_location_hint">Search for a location</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>